--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     -webkit-font-smoothing: antialiased;
     margin: 0 auto;
     font-family: Inter-regular;
-    padding: 16px;
+    padding: 1rem 1rem 5rem;
     background-color: hsl(36, 100%, 99%);
   }
   
@@ -37,15 +37,21 @@
   }
   p{
     font-weight: 400;
-    font-size: 15px;
+    font-size: 0.9375em;
     margin: 0;
     color: hsl(236, 13%, 42%);
   }
   h1 {
-    font-size: 40px;
+    font-size: 2.5rem;
     line-height: 1;
     font-weight: 800;
     margin: 0;
+  }
+  h2 {
+    font-size: 1.875em;
+  }
+  h3 {
+    font-size: 1em;
   }
   h2,h3 {
     font-weight: 700;
@@ -62,6 +68,9 @@
     align-items: center;
     margin-top: 12px;
     margin-bottom: 32px;
+  }
+  nav li:hover {
+    color: hsl(5, 85%, 63%);
   }
   .flex {
     display: none;
@@ -141,6 +150,10 @@
     line-height: 1.5;
     font-weight: 800;
   }
+  button:hover {
+    background-color: hsl(240, 100%, 5%);
+    color: hsl(36, 100%, 99%);
+  }
 
   aside {
     display: flex;
@@ -160,11 +173,14 @@
   }
   aside h2 {
     color: hsl(35, 77%, 62%);
-    font-size: 30px;
+    font-size: 1.875em;
     margin-bottom: -20px;
   }
   aside h3 {
     color: white;
+  }
+  aside h3:hover {
+    color: hsl(35, 77%, 62%);
   }
   aside p {
     color: hsl(233, 8%, 79%);
@@ -173,26 +189,28 @@
   article {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.75em;
   }
 
   .card {
     display: flex;
-    gap: 25px;
+    gap: 1em;
   }
   .card div {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+  
   }
   .card img {
-    width: 100px;
-    height: 130px;
+    height: 150px;
   }
   .card h2 {
-    font-size: 30px;
-    color: hsl(5, 85%, 63%);
+    font-size: 1;
+    color: hsl(233, 8%, 79%);
     line-height: 1;
+  }
+  .card h3:hover {
+    color: hsl(5, 85%, 63%);
   }
 
   @media screen and (min-width: 600px) {
@@ -202,6 +220,9 @@
   }
 
   @media screen and (min-width: 810px) {
+    body {
+      padding: 0 7% 90px;
+    }
     .flex {
       display: flex;
       list-style: none;
@@ -215,18 +236,42 @@
       display: none;
     }
     .grid-container {
-      grid-template-areas: 
-      "a a a b b"
-      "a a a b b"
-      "c c c c c" 
+      grid-template-columns: repeat(3 , 1fr);
+      grid-template-rows: 1fr 1fr;
+      gap: 25px;
+      height: 100vh;
+      max-width: 1440px;
     }
     main {
-      grid-area: a;
+      grid-area: 1 / 1 / 2 / 3  ;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+      align-items: flex-start;
+      gap: 1rem;
     }
     aside {
-      grid-area: b;
+      grid-area: 1 / 3  / 2 / 3;
     }
     article {
-      grid-area: c;
+      grid-area: 2 / 1 / 3 / 4;
+      flex-direction: row;
+      gap: 1.3em;
+    }
+
+    main div {
+      grid-area: 1 / 1 / 2 / 3;
+      width: 100%;
+    }
+    main img {
+      height: 290px;
+      width: 100%;
+      object-fit: cover;
+      object-position: 0 1px;
+    }
+    main h1 {
+      grid-area: 2 / 1;
+    }
+    main .text {
+      grid-area: 2 / 2;
     }
   }
