--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@
       grid-template-columns: repeat(3 , 1fr);
       grid-template-rows: 1fr 1fr;
       gap: 25px;
-      height: 100vh;
+      /* height: 100vh; */
       max-width: 1440px;
     }
     main {
@@ -254,7 +254,7 @@
     }
     article {
       grid-area: 2 / 1 / 3 / 4;
-      flex-direction: row;
+      flex-direction: column;
       gap: 1.3em;
     }
 
@@ -273,5 +273,12 @@
     }
     main .text {
       grid-area: 2 / 2;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    article {
+
+      flex-direction: row;
     }
   }
